--- a/user-interface/frontend/themes/datamanager/components/custom.css
+++ b/user-interface/frontend/themes/datamanager/components/custom.css
@@ -32,6 +32,6 @@ vaadin-avatar-group vaadin-avatar,
   justify-content: center;
   align-items: center;
   flex-direction: row;
-  column-gap: var(--lumo-space-s);
+  column-gap: var(--spacing-03);
   row-gap: initial;
 }
