--- a/user-interface/frontend/themes/datamanager/components/div.css
+++ b/user-interface/frontend/themes/datamanager/components/div.css
@@ -8,7 +8,7 @@
   display: flex;
   align-items: center;
   gap: var(--lumo-space-l);
-  margin: var(--lumo-space-s);
+  margin: var(--spacing-03);
 }
 
 .user-info-component .avatar {
@@ -20,19 +20,19 @@
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
-  gap: var(--lumo-space-s);
+  gap: var(--spacing-03);
 }
 
 .user-info-component .user-info .oidc {
   display: inline-flex;
   align-items: center;
-  gap: var(--lumo-space-s);
+  gap: var(--spacing-03);
   white-space: nowrap;
 }
 
 .user-info-component .user-info .user-name-and-full-name {
   display: flex;
-  gap: var(--lumo-space-s);
+  gap: var(--spacing-03);
   align-items: baseline;
 }
 
@@ -45,7 +45,7 @@
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
-  gap: var(--lumo-space-s);
+  gap: var(--spacing-03);
   width: clamp(300px, 300px, 15vw);
   padding-bottom: var(--lumo-space-l);
   padding-inline: var(--lumo-space-l);
@@ -63,7 +63,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  gap: var(--lumo-space-s);
+  gap: var(--spacing-03);
 }
 
 .disclaimer .disclaimer-label {
@@ -84,13 +84,13 @@
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
-  gap: var(--lumo-space-s);
+  gap: var(--spacing-03);
   cursor: default;
 }
 
 .grid-details-item .entry {
   display: inline-flex;
-  gap: var(--lumo-space-s);
+  gap: var(--spacing-03);
 }
 
 .grid-details-item .entry .entry-label {
@@ -101,7 +101,7 @@
 .grid-details-item .entry .entry-value-list {
   display: flex;
   flex-wrap: wrap;
-  gap: var(--lumo-space-s);
+  gap: var(--spacing-03);
 }
 
 .grid-details-item .entry-value {
@@ -113,7 +113,7 @@
 .ontology-component {
   display: flex;
   flex-direction: column;
-  gap: var(--lumo-space-s);
+  gap: var(--spacing-03);
 }
 
 .project-creation-stepper-arrow {
@@ -135,7 +135,7 @@
   flex-direction: column;
   align-items: center;
   white-space: nowrap;
-  gap: var(--lumo-space-s);
+  gap: var(--spacing-03);
 }
 
 .stepper .step[selected] > vaadin-avatar {
@@ -151,14 +151,14 @@
 .ontology-entry-collection {
   display: inline-flex;
   flex-wrap: wrap;
-  gap: var(--lumo-space-s);
+  gap: var(--spacing-03);
   width: 100%;
   white-space: nowrap;
 }
 
 .ontology-entry-collection .ontology-entry {
   display: inline-flex;
-  gap: var(--lumo-space-s);
+  gap: var(--spacing-03);
   width: 100%;
 }
 
