--- a/user-interface/frontend/themes/datamanager/components/info.css
+++ b/user-interface/frontend/themes/datamanager/components/info.css
@@ -15,7 +15,7 @@
   font-size: var(--lumo-font-size-s);
   color: var(--lumo-secondary-text-color);
   display: flex;
-  gap: var(--lumo-space-s);
+  gap: var(--spacing-03);
 }
 
 .info-entry {
