--- a/user-interface/frontend/themes/datamanager/components/navigation-drawer.css
+++ b/user-interface/frontend/themes/datamanager/components/navigation-drawer.css
@@ -3,14 +3,14 @@
   display: flex;
   flex-direction: column;
   gap: var(--lumo-space-m);
-  margin-inline: var(--lumo-space-s);
+  margin-inline: var(--spacing-03);
 }
 
 .project-navigation-drawer-title {
   font-weight: bold;
   font-size: var(--lumo-font-size-xl);
-  margin-left: var(--lumo-space-s);
-  margin-top: var(--lumo-space-s);
+  margin-left: var(--spacing-03);
+  margin-top: var(--spacing-03);
   margin-bottom: var(--lumo-space-l);
 }
 
@@ -51,8 +51,8 @@
 }
 
 .project-selection-menu {
-  margin-left: var(--lumo-space-s);
-  margin-right: var(--lumo-space-s);
+  margin-left: var(--spacing-03);
+  margin-right: var(--spacing-03);
 }
 
 .project-selection-menu vaadin-menu-bar-button[aria-haspopup] {
