--- a/user-interface/frontend/themes/datamanager/components/page-area.css
+++ b/user-interface/frontend/themes/datamanager/components/page-area.css
@@ -9,7 +9,7 @@
   padding: var(--lumo-space-l);
   flex-direction: column;
   display: flex;
-  gap: var(--lumo-space-s);
+  gap: var(--spacing-03);
 }
 
 .page-area .title {
@@ -29,7 +29,7 @@
 
 .batch-details-component .editor-buttons {
   display: inline-flex;
-  gap: var(--lumo-space-s);
+  gap: var(--spacing-03);
 }
 
 .batch-details-component .title-and-controls {
@@ -61,7 +61,7 @@
 
 .experiment-details-component .sample-source-display .sample-source .ontologies {
   display: flex;
-  row-gap: var(--lumo-space-s);
+  row-gap: var(--spacing-03);
   align-items: center;
   width: 100%;
   flex-direction: column;
@@ -69,7 +69,7 @@
 
 .experiment-details-component .sample-source-display .sample-source .ontologies .ontology {
   display: inline-flex;
-  gap: var(--lumo-space-s);
+  gap: var(--spacing-03);
   align-items: center;
   width: 100%;
 }
@@ -139,13 +139,13 @@
 
 .measurement-details-component .measurement-grid .measurement-column-cell {
   display: inline-flex;
-  column-gap: var(--lumo-space-s);
+  column-gap: var(--spacing-03);
   align-items: center;
 }
 
 .measurement-details-component .measurement-grid .sample-column-cell {
   display: inline-flex;
-  column-gap: var(--lumo-space-s);
+  column-gap: var(--spacing-03);
   align-items: center;
 }
 
@@ -158,7 +158,7 @@
 
 .measurement-details-component .measurement-grid .organisation-entry {
   align-items: center;
-  column-gap: var(--lumo-space-s);
+  column-gap: var(--spacing-03);
   display: flex;
 }
 
@@ -168,7 +168,7 @@
 }
 
 .measurement-details-component .measurement-grid .instrument-column {
-  column-gap: var(--lumo-space-s);
+  column-gap: var(--spacing-03);
   align-items: center;
   display: inline-flex;
 }
@@ -176,13 +176,13 @@
 .measurement-details-component .measurement-grid .measurement-item {
   display: flex;
   flex-direction: column;
-  row-gap: var(--lumo-space-s);
+  row-gap: var(--spacing-03);
   cursor: default;
 }
 
 .measurement-details-component .measurement-grid .measurement-item .entry {
   display: inline-flex;
-  column-gap: var(--lumo-space-s);
+  column-gap: var(--spacing-03);
 }
 
 .measurement-details-component .measurement-grid .measurement-item .entry .entry-label {
@@ -191,7 +191,7 @@
 }
 
 .tab-with-count {
-  gap: var(--lumo-space-s);
+  gap: var(--spacing-03);
 }
 
 .ontology-lookup-component {
@@ -207,7 +207,7 @@
 .ontology-lookup-component .ontology-grid-section {
   border-top: 1px solid var(--lumo-contrast-10pct);
   margin-right: var(--lumo-space-xl);
-  row-gap: var(--lumo-space-s);
+  row-gap: var(--spacing-03);
   padding-top: var(--lumo-space-m);
   height: 100%;
   display: flex;
@@ -216,7 +216,7 @@
 
 .ontology-lookup-component .ontology-grid-section .ontology-grid {
   height: 100%;
-  margin-top: var(--lumo-space-s);
+  margin-top: var(--spacing-03);
 }
 
 .ontology-lookup-component .ontology-grid vaadin-grid-cell-content {
@@ -231,18 +231,18 @@
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
-  margin-bottom: var(--lumo-space-s);
-  margin-top: var(--lumo-space-s);
+  margin-bottom: var(--spacing-03);
+  margin-top: var(--spacing-03);
   overflow: hidden;
   padding: var(--lumo-space-m);
-  row-gap: var(--lumo-space-s);
+  row-gap: var(--spacing-03);
   text-overflow: ellipsis;
   white-space: normal;
 }
 
 .ontology-lookup-component .ontology-item .header {
   display: inline-flex;
-  column-gap: var(--lumo-space-s);
+  column-gap: var(--spacing-03);
   align-items: center;
 }
 
@@ -292,7 +292,7 @@
 }
 
 .personal-access-token-component .header .buttons {
-  column-gap: var(--lumo-space-s);
+  column-gap: var(--spacing-03);
   display: inline-flex;
 }
 
@@ -314,7 +314,7 @@
 .personal-access-token-component .personal-access-token-container .show-created-personal-access-token-details {
   display: flex;
   flex-direction: column;
-  row-gap: var(--lumo-space-s);
+  row-gap: var(--spacing-03);
   padding: var(--lumo-space-m);
   border: 1px solid var(--lumo-contrast-20pct);
   width: 100%;
@@ -328,14 +328,14 @@
 
 .personal-access-token-component .personal-access-token-container .show-created-personal-access-token-details .copy-disclaimer {
   display: inline-flex;
-  column-gap: var(--lumo-space-s);
+  column-gap: var(--spacing-03);
   font-size: var(--lumo-font-size-s);
   align-items: center;
 }
 
 .personal-access-token-component .personal-access-token-container .show-created-personal-access-token-details .token-text {
   display: inline-flex;
-  column-gap: var(--lumo-space-s);
+  column-gap: var(--spacing-03);
   align-items: center;
 }
 
@@ -347,20 +347,20 @@
 
 .personal-access-token-component .personal-access-token-container .show-encrypted-personal-access-token-details .copy-disclaimer {
   display: inline-flex;
-  column-gap: var(--lumo-space-s);
+  column-gap: var(--spacing-03);
   align-items: center;
 
 }
 
 .personal-access-token-component .personal-access-token-container .show-encrypted-personal-access-token-details .expiration-date {
   display: inline-flex;
-  column-gap: var(--lumo-space-s);
+  column-gap: var(--spacing-03);
   align-items: center;
 }
 
 .personal-access-token-component .personal-access-token-container .show-encrypted-personal-access-token-details .token-text {
   display: inline-flex;
-  column-gap: var(--lumo-space-s);
+  column-gap: var(--spacing-03);
   align-items: center;
 }
 
@@ -393,7 +393,7 @@
 
 .project-access-component .oidc-cell {
   display: inline-flex;
-  gap: var(--lumo-space-s);
+  gap: var(--spacing-03);
   align-items: center;
 }
 
