--- a/user-interface/frontend/themes/datamanager/components/virtuallist.css
+++ b/user-interface/frontend/themes/datamanager/components/virtuallist.css
@@ -15,15 +15,15 @@
   justify-content: space-between;
   width: 100%;
   column-gap: var(--lumo-space-l);
-  padding-top: var(--lumo-space-s);
-  padding-bottom: var(--lumo-space-s);
+  padding-top: var(--spacing-03);
+  padding-bottom: var(--spacing-03);
 }
 
 .measurement-template-list-component .measurement-template-list-item .controls {
   display: inline-flex;
   align-items: end;
   justify-items: center;
-  column-gap: var(--lumo-space-s);
+  column-gap: var(--spacing-03);
   padding-inline: var(--lumo-space-m);
 }
 
@@ -42,13 +42,13 @@
 .measurement-template-list-component .measurement-template-list-item .file-info {
   display: inline-flex;
   flex-direction: column;
-  gap: var(--lumo-space-s);
+  gap: var(--spacing-03);
   overflow: hidden;
 }
 
 .measurement-template-list-component .measurement-template-list-item .file-info-with-icon {
   display: inline-flex;
-  gap: var(--lumo-space-s);
+  gap: var(--spacing-03);
   overflow: hidden;
   align-items: center;
 }
@@ -65,15 +65,15 @@
   justify-content: space-between;
   width: 100%;
   column-gap: var(--lumo-space-l);
-  padding-top: var(--lumo-space-s);
-  padding-bottom: var(--lumo-space-s);
+  padding-top: var(--spacing-03);
+  padding-bottom: var(--spacing-03);
 }
 
 .offer-list-component .offer-info .controls {
   display: inline-flex;
   align-items: end;
   justify-items: center;
-  column-gap: var(--lumo-space-s);
+  column-gap: var(--spacing-03);
   padding-inline: var(--lumo-space-m);
 }
 
@@ -86,7 +86,7 @@
 
 .offer-list-component .offer-info .file-info {
   display: inline-flex;
-  gap: var(--lumo-space-s);
+  gap: var(--spacing-03);
   align-items: center;
   overflow: hidden;
 }
@@ -143,15 +143,15 @@
   justify-content: space-between;
   width: 100%;
   column-gap: var(--lumo-space-l);
-  padding-top: var(--lumo-space-s);
-  padding-bottom: var(--lumo-space-s);
+  padding-top: var(--spacing-03);
+  padding-bottom: var(--spacing-03);
 }
 
 .quality-control-list-component .quality-control-item .controls {
   display: inline-flex;
   align-items: end;
   justify-items: center;
-  column-gap: var(--lumo-space-s);
+  column-gap: var(--spacing-03);
   padding-inline: var(--lumo-space-m);
 }
 
@@ -170,7 +170,7 @@
 .quality-control-list-component .quality-control-item .file-info {
   display: inline-flex;
   flex-direction: column;
-  gap: var(--lumo-space-s);
+  gap: var(--spacing-03);
   overflow: hidden;
 }
 
