--- a/user-interface/frontend/themes/datamanager/components/all.css
+++ b/user-interface/frontend/themes/datamanager/components/all.css
@@ -194,6 +194,15 @@ Padding & gaps
   padding-top: var(--spacing-05);
 }
 
+.padding-bottom-02 {
+  padding-bottom: var(--spacing-02);
+}
+
+.padding-top-bottom-02 {
+  padding-top: var(--spacing-02);
+  padding-bottom: var(--spacing-02);
+}
+
 .padding-top-bottom-04 {
   padding-top: var(--spacing-04);
   padding-bottom: var(--spacing-04);
