--- a/user-interface/frontend/themes/datamanager/components/variables.css
+++ b/user-interface/frontend/themes/datamanager/components/variables.css
@@ -27,12 +27,18 @@ First some general property definitions
   --font-weight-bold: 700;
   --border-color-default: hsla(214, 50%, 22%, 0.26);
   --border-color-dialog: rgba(26, 56, 96, 0.1);
-  --icon-color-primary: var(--lumo-primary-color);
+  --primary-color: hsl(214, 100%, 48%);
+  --primary-contrast-color: #fff;
+  --primary-text-color: hsl(214, 100%, 43%);
+  --secondary-text-color: hsla(214, 42%, 18%, 0.69);
+  --tertiary-text-color: hsla(214, 45%, 20%, 0.52);
+  --icon-color-primary: var(--primary-color);
   --icon-color-info: rgba(22, 118, 243, 1);
   --icon-color-error: rgba(255, 66, 56, 1);
   --icon-color-success: rgba(21, 193, 93, 1);
   --icon-color-warning: rgba(254, 201, 1, 1);
   --icon-color-default: rgba(28, 46, 69, 0.6);
+  --label-font-size: 0.875rem;
   --icon-size-xs: 1rem;
   --icon-size-s: 1.25rem; /*--lumo-icon-size-s*/
   --icon-size-m: 1.5rem; /*--lumo-icon-size-m*/
